@@ -21,7 +21,6 @@ import org.elasticsearch.xpack.core.security.action.saml.SamlSpMetadataRequest;
 import org.elasticsearch.xpack.core.security.action.saml.SamlSpMetadataResponse;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.GET;
@@ -34,8 +33,7 @@ public class RestSamlSpMetadataAction extends SamlBaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.singletonList(
-            new Route(GET, "/_security/saml/metadata/{realm}"));
+        return List.of(new Route(GET, "/_security/saml/metadata/{realm}"));
     }
 
     @Override
@@ -48,13 +46,13 @@ public class RestSamlSpMetadataAction extends SamlBaseRestHandler {
         final SamlSpMetadataRequest SamlSpMetadataRequest = new SamlSpMetadataRequest(request.param("realm"));
         return channel -> client.execute(SamlSpMetadataAction.INSTANCE, SamlSpMetadataRequest,
             new RestBuilderListener<SamlSpMetadataResponse>(channel) {
-            @Override
-            public RestResponse buildResponse(SamlSpMetadataResponse response, XContentBuilder builder) throws Exception {
-                builder.startObject();
-                builder.field("metadata", response.getXMLString());
-                builder.endObject();
-                return new BytesRestResponse(RestStatus.OK, builder);
-            }
-        });
+                @Override
+                public RestResponse buildResponse(SamlSpMetadataResponse response, XContentBuilder builder) throws Exception {
+                    builder.startObject();
+                    builder.field("metadata", response.getXMLString());
+                    builder.endObject();
+                    return new BytesRestResponse(RestStatus.OK, builder);
+                }
+            });
     }
 }
